# BSRL

./: .gitignore  README.md  configs.py  env.py  environment.py  main.py  models.py  pyproject.toml  testing.ipynb
core/: configs.py  environment.py  models.py
display/: app.py
evals/: eval.ipynb  eval_harness.py
experiments/curriculum-learning/: actor_critic_model.py  training.py
experiments/curriculum-learning/artifacts/: training_configs.json
experiments/successful-bluffing/: log.md  training.py
experiments/successful-bluffing/artifacts/: training_configs.json
experiments/truthful-play/: log.md  training.py
experiments/truthful-play/artifacts/: training_configs.json
ppo/: actor_critic_model.py  model.py  ppo.ipynb  training.py
tests/: test_environment.py
