[project]
name = "bsrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
